# medix

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  release-please-config.json  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-docs.yml  release-please.yml
assets/: generate_demos.py
docs/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json
docs/src/content/docs/: 404.md  features.md  index.mdx  roadmap.md
docs/src/content/docs/development/: contributing.md  releases.md  testing.md
docs/src/content/docs/getting-started/: installation.md  quick-start.md  requirements.md
docs/src/content/docs/guides/: advanced-settings.md  cli-usage.md  dry-run.md  ffmpeg-setup.md  formats.md
docs/src/content/docs/reference/: cli.md  supported-formats.md
docs/src/styles/: custom.css
medix/: __main__.py  cli.py  converter.py  dependencies.py  formats.py
tests/: test_cli.py  test_converter.py  test_dependencies.py  test_formats.py
