[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medix"
version = "1.0.0"
description = "A fancy CLI media format converter powered by FFmpeg"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "questionary>=2.0",
]

[project.scripts]
medix = "medix.cli:main"
