[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medix"
version = "1.2.1"
description = "A fancy CLI media format converter powered by FFmpeg"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Vineeth Krishnan" },
]
keywords = ["ffmpeg", "media", "converter", "video", "audio", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video :: Conversion",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "questionary>=2.0",
]

[project.urls]
Homepage = "https://github.com/vineethkrishnan/medix"
Repository = "https://github.com/vineethkrishnan/medix"
Changelog = "https://github.com/vineethkrishnan/medix/blob/main/CHANGELOG.md"
Issues = "https://github.com/vineethkrishnan/medix/issues"

[tool.setuptools.packages.find]
include = ["medix*"]

[project.scripts]
medix = "medix.cli:main"
